<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <import type="android.text.TextUtils"/>

        <variable
            name="businessViewModel"
            type="sk.mobv.androidprojectschool.viewModels.BusinessViewModel" />

        <variable
            name="thisFragment"
            type="sk.mobv.androidprojectschool.ui.BusinessDetailFragment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.BusinessDetailFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/business_name"
                    style="@style/Widget.MOBV.TextView.BusinessName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{businessViewModel.business.name ?? @string/business_without_name}"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/enter_the_data" />


                <TextView
                    android:id="@+id/phone_number"
                    style="@style/Widget.MOBV.TextView.BusinessInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:onClick="@{() -> thisFragment.callPhoneNumberIntent(businessViewModel.business.phoneNumber)}"
                    android:text="@{businessViewModel.business.phoneNumber}"
                    android:visibility="@{TextUtils.isEmpty(businessViewModel.business.phoneNumber) ? View.GONE: View.VISIBLE}"
                    app:drawableLeftCompat="@drawable/ic_call"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/business_name"
                    tools:text="@string/enter_the_data" />


                <TextView
                    android:id="@+id/web_page"
                    style="@style/Widget.MOBV.TextView.BusinessInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:onClick="@{() -> thisFragment.showWebPageIntent(businessViewModel.business.webPage)}"
                    android:text="@{businessViewModel.business.webPage}"
                    android:visibility="@{TextUtils.isEmpty(businessViewModel.business.webPage) ? View.GONE: View.VISIBLE}"
                    app:drawableLeftCompat="@drawable/ic_web"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_number"
                    tools:text="@string/enter_the_data" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_on_map_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="@{() -> thisFragment.showOnMapIntent(businessViewModel.business.latitude, businessViewModel.business.longitude)}"
                    android:text="@string/show_on_map"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/web_page" />


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/show_on_map_button"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/beer_refill" />

                <Button
                    android:id="@+id/remove_button"
                    android:layout_width="110dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#FBC02D"
                    android:text="@string/remove"
                    android:textColor="#6D4C41"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/add_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pour_out_button" />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="110dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#388E3C"
                    android:text="@string/add"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/remove_button"
                    app:layout_constraintTop_toBottomOf="@+id/pour_out_button" />

                <Button
                    android:id="@+id/pour_out_button"
                    android:layout_width="122dp"
                    android:layout_height="67dp"
                    android:backgroundTint="#C62828"
                    android:onClick="@{() -> thisFragment.pourOutGlass()}"
                    android:text="@string/pour_out"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/animationView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="40dp"
            android:contentDescription="@string/edit_business"
            android:onClick="@{() -> thisFragment.goToEditBusinessScreen()}"
            android:src="@drawable/ic_edit" />
    </FrameLayout>
</layout>